Bug 1780803 - Avoid uninitialized enum in error path. r=gfx-reviewers,jgilbert

Addresses a coverity warning. The problem looks very benign but the work around is simple and it's good to keep the volume static analysis warnings in check.

Differential Revision: https://phabricator.services.mozilla.com/D152525